// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.time.admin.v30;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

service DomainTimeService {
  // fetch the domain time which has been received within a supplied freshness bound defined by the local clock
  rpc FetchTime(FetchTimeRequest) returns (FetchTimeResponse);
  // await for the supplied time to be reached on the target domain
  rpc AwaitTime(AwaitTimeRequest) returns (AwaitTimeResponse);
}

message FetchTimeRequest {
  // optional - must be specified for participants but can be defaulted for domain entities as they only have one possible domain
  optional string domain_id = 1;
  google.protobuf.Duration freshness_bound = 2;
}

message FetchTimeResponse {
  google.protobuf.Timestamp timestamp = 1;
}

message AwaitTimeRequest {
  // optional - must be specified for participants but can be defaulted for domain entities as they only have one possible domain
  optional string domain_id = 1;
  // the domain time to wait for
  google.protobuf.Timestamp timestamp = 2;
}

message AwaitTimeResponse {}
